--- a/docs/2.7_reading-code.md
+++ b/docs/2.7_reading-code.md
@@ -176,23 +176,25 @@ for x in X:
 print(blort)
 ```
 
-Max value in `X`. 
+`X`的最大值。
 
-<img src="img/redbang.png" width="30" align="left">Anytime you see an `if` statement inside of a loop, think *filter* or *search* or *accumulator with condition*. It will usually be a variation on one of those. This assumes that the conditional expression is a function of the loop variable directly or indirectly.
+<img src="img/redbang.png" width="30" align="left">
 
-**Exercise**: What does this variation print?
+无论何时在循环内部看到`if`语句，请考虑*过滤*或*搜索*或*条件累积*。 它通常是其中一个的变体。这假设条件表达式是直接或间接的循环变量的函数。
+
+**练习**：这个变体打印了什么？
 
 ```python
-blort = -99999
+blort = float('-inf')
 for i in range(len(X)):
     if X[i] > blort:
         blort = X[i]
 print blort
 ```
 
-Exactly the same thing; `blort` is the max of `X`.  You see a conditional expression that is a function of the loop variable inside of a loop. This is just a reformulation of the previous.
+完全一样的东西; `blort`是`X`的最大值。 您会看到一个条件表达式，它是循环内部循环变量的函数。这只是前一次的重组。
 
-**Exercise**: What is the goal of this code? I.e., what value does it print for `foo` after the loop?
+**练习**：这段代码的目标是什么？ 即，循环后它为`foo`打印的值是多少？
 
 ```python
 foo = -1
@@ -204,13 +206,13 @@ for i in range(len(X)):
 print(foo)
 ```
 
-argmax of `X`.  We know the code associated with the conditional is figuring out the max from our previous examples, but it is also tracking the `i`, the index. 
+`X`的最大值索引（`argmax`）。 我们知道与条件相关的代码，是从前面的例子中找出最大值，但它也跟踪了索引`i`。
 
-Think of this as a standard pattern you've already figured out, but a variation that does some extra stuff. Then ask what the difference between the two is. 
+可以把它想象成你已经想到的标准模式，但这种变体可以做一些额外的事情。 然后问两者之间有什么区别。
 
-This makes an excellent case for trying to understand what the input-output pairs are (though we're talking about the guts of but not a full function here). With the max computation, the output is a value taken from `X`. In this case, the value printed out is an index in `0..len(X)-1`.
+这是尝试理解输入 - 输出对是什么的一个很好的例子（虽然我们在这里谈论的是代码段而不是完整的函数）。 在最大值的计算中，输出是取自`X`的值。 在这种情况下，打印出的值是`0..len(X)-1`中的索引。
 
-**Exercise**: Describe what value `bar` has after this code completes.
+**练习**：描述此代码完成后`bar`的值。
 
 ```python
 foo = []
@@ -222,9 +224,9 @@ for zoo in foo:
         bar.append(zoo)
 ```
 
-There's a lot going on here, but it is really nothing more than two patterns in a sequence. The first pattern is a map operation that doubles the values in `blort` to create the `foo` list, which is consumed by the second loop. The second loop is just a filter that extracts all values > 10 from `foo` into `bar.
+这里有很多东西，但它实际上只不过是一个序列中的两个模式。 第一个模式是一个映射操作，它将`blort`中的值加倍，来创建`foo`列表，该列表由第二个循环使用。第二个循环只是一个过滤，它将所有`> 10`的值从`foo`提取到`bar`。
 
-**Exercise**: What values are in `a` and `b` after this code executes?
+**练习**：执行此代码后，`a`和`b`是什么值？
 
 ```python
 a = 0
@@ -236,9 +238,9 @@ for x in X:
         b = b + 1
 ```
 
-This is a double accumulator with a condition. It is an accumulator because it updates at least one variable as it proceeds through the loop. It has an accumulator condition because it is a conditional inside an accumulator loop where the conditional expression tests the loop iterator value.  `a` as the number of values in `X` less than 10 and `b` has the count of values greater than or equal to 10.
+这是一个具有条件的双重累积。 它是一个累积，因为它在循环中更新至少一个变量。 它有一个累积条件，因为它是一个累积循环中的条件，其中条件表达式测试循环迭代器的值。 `a`是`X`中小于 10 的值的数量，`b`是大于或等于 10 的值的数量。
 
-**Exercise**: What value does `Y` have after the loop?
+**练习**：循环后`Y`是什么值？
 
 ```python
 a = 2
@@ -249,9 +251,9 @@ for i in range(len(X)):
         Y.append(X[i])
 ```
 
-This loop implements the slice operation that extracts a subset of elements from a list. In this case, it is choosing elements in range a..b of `X`, inclusively, and adding them to `Y`.
+此循环实现切片操作，从列表中提取元素的子集。 在这种情况下，它选择范围`a..b`中的`X`的元素，包含边界，并将它们添加到`Y`。
 
-That implementation is very inefficient because it wants the entire list to get the elements in a range. It's much faster and easier to understand if we change the bounds of the loop to the range of interest:
+该实现效率非常低，因为它遍历整个列表来获取范围内的元素。 如果我们将循环的边界更改为所需范围，它会更快更容易理解：
 
 ```python
 a = 2
@@ -261,10 +263,10 @@ for i in range(a, b+1):  # range is [a,b]
     Y.append(X[i])
 ```
 
-## Summary
+## 总结
 
-Written code is an important part of being a programmer. Code is how programmers communicate. It's how we are able to use extra libraries effectively, how we debug, and how we gain experience.
+编写代码是成为程序员的重要部分。代码是程序员的沟通方式。 这是我们有效地使用额外的库，调试，以及获得经验的方式。
 
-The trick to reading code is to reverse the program design process that goes from function workplan to pseudocode to Python code. The biggest clues come from variable and function names, and possibly code comments. Then we look for code templates expressed in the code to reverse-engineer the original intent of the author based upon that template choice.  For example, ask whether the code represents a map or search operation. Don't try to mimic a computer and guess the emergent behavior using a chart of how expression values change over time. Sometimes you have to do that for debugging purposes, but in general, your goal is to guess the intent of the code author.
+阅读代码的技巧是翻转从函数工作计划到伪代码再到 Python 代码的编程过程。 最大的线索来自变量和函数名称，可能还有代码注释。 然后，我们查找代码中所表达的代码模板，根据该模板的选择，对作者的原始意图进行反向工程。 例如，询问代码代表映射还是搜索操作。 不要试图模仿计算机，并使用表达式值和时间的图表来猜测突现行为。 有时你必须这样做才能进行调试，但总的来说，你的目标是猜测代码作者的意图。
 
-Because reading code is an important part of your process, be kind to other developers and your future self by writing high-quality code. That includes choosing excellent variable and function names and writing code that clearly illustrates your intent.
+因为阅读代码是您流程的重要组成部分，所以通过编写高质量的代码，善待其他开发人员和您未来的自已。 这包括选择优秀的变量和函数名称以及编写清楚说明您意图的代码。
