--- a/docs/2.8_OO.md
+++ b/docs/2.8_OO.md
@@ -57,7 +57,7 @@ len(x)
 
 然而，在实现方面，`x.lower()`实际上实现为`str.lower(x)`其中`str`是字符串的类定义。 电脑处理器了解函数调用; 他们不理解对象，所以我们在 Python 解释器本身中执行了这个翻译。
 
-# 包 VS 对象成员
+## 包 VS 对象成员
 
 让我们直截了当。点`.`运算符在 Python 中重载，表示包成员和对象成员访问。你已经熟悉了这个：
 
@@ -80,7 +80,7 @@ math.log(3000)
 
 在`wordsim`项目中，你定义了一个名为`wordsim.py`的文件，然后我的`test_wordsim.py`文件执行`from wordsim import *`来导入`wordsim.py`中的所有函数。
 
-## 练习
+### 练习
 
 在下文中，将*标识符*（单词）标识为包或函数或字段：
 
@@ -100,7 +100,7 @@ math.log(3000)
 1. `df["saledate"].dt.year`
 1. `df_train.isnull().any().head(60)`
 
-# 字段 VS 方法
+## 字段 VS 方法
 
 对象具有函数，我们将其称为*方法*，以将它们与不与对象关联的函数区分开来。 对象也有变量，我们称之为*字段*或*实例变量*。
 
@@ -131,7 +131,7 @@ s.title
 # <function str.title>
 ```
 
-# 简单的对象定义
+## 简单的对象定义
 
 类是多个对象的蓝图，通常称为*实例*。 类*封装了对象的状态和行为。
 
@@ -139,7 +139,7 @@ s.title
 
 按照惯例，类名称应该像“Point”一样大写。
 
-## 作为对象替代品的元组
+### 作为对象替代品的元组
 
 对象的字段是我们想要关联在一起的数据项。 例如，如果我想跟踪书名/作者，我可以使用元组列表：
 
@@ -178,7 +178,7 @@ David Brin: Startide Rising
 
 为了在两种情况下访问元组的元素，我们必须跟踪我们头脑中的顺序。 换句话说，我们必须访问元组元素，就像它们是列表元素一样。
 
-## 形式对象
+### 形式对象
 
 更好的方法是正式声明，作者和标题数据元素应该封装到称为书籍的单个实体中。我认为 Python 的规范非常古怪，但它非常灵活。 例如，我们可以定义一个没有方法没有字段的对象，但是可以使用赋值语句动态添加字段：
 
@@ -243,7 +243,7 @@ Startide Rising: David Brin
 
 请注意，我们不会将`self`参数传递给构造函数。 **它在调用一侧隐藏，但在定义一侧出现！**
 
-## 顽皮的行为
+### 顽皮的行为
 
 还要注意我们一直在使用构造函数设置对象的字段，Python 以其无限的灵活性允许你做非常顽皮的事情，比如在任意对象上设置字段：
 
@@ -259,7 +259,7 @@ x.foo = 3
 
 您甚至可以[动态添加方法](https://stackoverflow.com/questions/972/adding-a-method-to-an-existing-object-instance)。
 
-# 定义方法
+## 定义方法
 
 如果您尝试打印一本书，您将只看到类型信息和物理内存地址：
 
@@ -342,29 +342,29 @@ Book(Gridlinked, Neal Asher, sold=100)
 
 **注意**：在方法定义中，我们调用同一对象上的其他方法，使用`self.foo(...)`调用方法`foo`。
 
-## The key to understanding methods versus functions
+### 理解方法和函数的关键
 
-`b.sell(100)` **method call** is translated and executed by the Python interpreter as **function call** `Book.sell(b,100)`. `b` becomes parameter `self` and so the `sell()` function is updating book `b`.
+`b.sell(100)`**方法调用**由 Python 解释器翻译并执行为**函数调用**`Book.sell(b, 100)`。 `b`变成参数`self`，所以`sell()`函数正在更新`book b`。
 
-Why we prefer `b.sell(100)` over `Book.sell(b,100)`: Instead of just functions, we send messages back and forth between objects. Instead of bark(dog) we say dog.bark() or instead of inflate(ball) we say ball.inflate().
+为什么我们更喜欢`b.sell(100)`而不是`Book.sell(b, 100)`：我们不仅仅在函数，并且在对象之间来回传递消息。 我们说`dog.bark()`，不是`bark(dog)`，或我们说`ball.inflate()`，而不是`inflate(ball)`。
 
-## Exercise
+### 练习
 
-Real-world objects contain ... and ...
+真实世界的对象包含......和......
 
-A software object's state is stored in ...
+软件对象的状态存储在......
 
-A software object's behavior is exposed through ...
+软件对象的行为通过......公开
 
-A blueprint for a software object is called a ...
+软件对象的蓝图称为...
 
-## Exercise
+### 练习
 
-Define a class called `Point` that has a constructor taking x, y coordinates and make them fields of the class.
+定义一个名为`Point`的类，它有一个构造函数，接受`x`，`y`坐标并使它们成为类的字段。
 
-Define method `distance(q)` that takes a `Point` and returns the Euclidean distance  from `self` to `q`.
+定义方法`distance(q)`，它接受一个`Point`并返回从`self`到`q`的欧几里德距离。
 
-Test with
+使用这个来测试：
 
 ```
 p = Point(3,4)
@@ -372,10 +372,9 @@ q = Point(5,6)
 print(p.distance(q))
 ```
 
-Add method `__str__` so that `print(q)` prints something nice like `(3,4)`.
+添加方法`__str__`，以便`print(q)`打印出类似`(3, 4)`的东西。
 
-### Solution
-
+### 答案
 
 ```python
 import numpy as np
@@ -392,7 +391,6 @@ class Point:
         return f"({self.x},{self.y})"
 ```
 
-
 ```python
 p = Point(3,4)
 q = Point(5,6)
@@ -406,10 +404,9 @@ print(p.distance(q))
 ```
 
 
-# Inheritance
+## 继承
 
-Defining something new as it relates to something we already understand is usually a lot easier. The same thing is true in programming. Let's start with an account object:
-
+定义一些与我们已经理解的东西相关的新东西，通常要容易得多。 在编程中也是如此。 让我们从一个帐户对象开始：
 
 ```python
 class Account:
@@ -432,28 +429,15 @@ a.total()
 # 115.0
 ```
 
-
-
-
-
-
-
-
 ```python
 objviz(a)
 ```
 
-
-
-
 ![svg](img/2.8_OO_65_0.svg)
 
+继承的行为类似于`import`，或从另一个类导入操作到新类。 （*请注意，这不是真的，但我们可以将其视为包含，对于我们目的。*）
 
-
-Inheritance behaves like an `import` or include operation from another class into a new class. (*Note that this is not really true, but we can think of it as an include for our purposes.*)
-
-If we do not specify a superclass, class `object` is the implicit superclass.  That class is called the root of the class hierarchy and defines a number of standard methods:
-
+如果我们不指定超类，则类`object`是隐式超类。 该类称为类层次结构的根，并定义了许多标准方法：
 
 ```python
 x = object() # yes, we can make a generic object
@@ -462,8 +446,7 @@ print(dir(x))
 # ['__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']
 ```
 
-We could define an interest-bearing account as it differs from a regular account:
-
+我们可以定义一个有息账户，因为它与普通账户不同：
 
 ```python
 class InterestingAccount(Account): # derive from super class to get subclass
@@ -478,22 +461,15 @@ b.add(15)
 b.total()
 ```
 
-
 ```python
 objviz(b)
 ```
 
-
-
-
 ![svg](img/2.8_OO_70_0.svg)
 
+要点是我们可以使用`add()`而不必在`InterestingAccount`中重新定义它，而`InterestingAccount`也可以覆盖帐户的`total()`。 我们已经*复用*和*覆盖*以前的功能。您可以将超类视为定义一些初始函数，我们可以在子类中重用或覆盖他们。
 
-
-The key is that we get to use `add()` without having to redefine it in `InterestingAccount` and `InterestingAccount` also gets to override what the `total()` of the account is.  We have *reused* and *refined* previous functionality. You can think of the superclass as defining some initial functions that we can reuse or override in the subclass.
-
-We can also *extend* the functionality by adding a method that is not in the superclass.
-
+我们还可以通过添加不在超类中的方法来*扩展*功能。
 
 ```python
 class InterestingAccount(Account): # derive from super class to get subclass
@@ -517,13 +493,6 @@ b.profit()
 # 17.25
 ```
 
-
-
-
-
-
-
-
 ```python
 a = Account(100.0)
 b = InterestingAccount(100.0, 0.15)
@@ -536,8 +505,7 @@ print(type(b))
 '''
 ```
 
-The class definitions are actually objects themselves that you can access with a secret field of any object:
-
+类的定义实际上本身是对象，您可以使用任何对象的秘密字段访问它们：
 
 ```python
 print(b.__class__)
@@ -549,24 +517,23 @@ print(b.__class__.__base__)
 '''
 ```
 
-## Exercise
+### 练习
 
-1. What is a class?
-1. What's the difference between a class and an instance?
-1. Define a new instance of class `Foo` using a constructor that takes no arguments.
-1. What is the syntax to access a field of an object?
-1. How does a method differ from a function?
-1. What does the `__init__` method do?
-1. Given classes `Employee` and `Manager`, which is the superclass in which is the subclass?
-1. Can a method in a subclass call a method defined in the superclass?
-1. How do you override a method inherited from your superclass?
+1. 什么是类？
+1. 类和实例之间有什么区别？
+1. 使用不带参数的构造函数定义类`Foo`的新实例。
+1. 访问对象字段的语法是什么？
+1. 方法与函数有何不同？
+1. `__init__`方法有什么作用？
+1. 给定类`Employee`和`Manager`，哪个是子类或者超类？
+1. 子类中的方法可以调用超类中定义的方法吗？
+1. 如何覆盖从超类继承的方法？
 
-## Dynamic dispatch (Advanced)
+## 动态调度（高级）
 
-When you call `b.add(15)`, Python looks up function `add` within the object definition for `b` (`InterestingAccount`).  Because we have inherited that method from the superclass, subclass knows about it. When we call `b.total()`, Python again looks up method within `InterestingAccount` and finds an overridden method. That is why `b.total()` doesn't invoke the `Account` version.
+当你调用`b.add(15)`时，Python 在`b`（`InterestingAccount`）的对象定义中查找函数`add`。 因为我们从超类继承了该方法，所以子类知道它。 当我们调用`b.total()`时，Python再次查找`InterestingAccount`中的方法并找到一个重写方法。 这就是为什么`b.total()`不会调用`Account`版本。
 
-This behavior is desirable but extremely confusing at first. Here is an example of it in action where I have added a `__str__` method to the superclass:
-
+这种行为是可取的，但起初非常混乱。 下面是一个实例，其中我添加了一个`__str__`方法给超类：
 
 ```python
 class Account:
@@ -594,8 +561,7 @@ class InterestingAccount(Account): # derive from super class to get subclass
         return self.balance * self.rate
 ```
 
-The devious part is that `__str__` in `Account` calls `Account.total()` or `InterestingAccount.total()`, depending on the type of `self`:
-
+微妙的部分是`Account`中的`__str__`调用`Account.total()`或`InterestingAccount.total()`，具体取决于`self`的类型：
 
 ```python
 a = Account(100.0)
@@ -609,15 +575,15 @@ Balance 115.0
 '''
 ```
 
-## Exercise
+### 练习
 
-Define a `Point3D` that inherits from `Point`. 
+定义一个继承自`Point`的`Point3D`。
 
-Define constructor that takes x,y,z values and sets fields. Call `super().__init__(x,y)` to call constructor of superclass.
+定义接受`x, y, z`值并设置字段的构造函数。 调用`super().__init__(x, y)`来调用超类的构造函数。
 
-Define / override `distance(q)` so it works with 3D field values to return distance.
+定义/覆盖`distance(q)`，以便它处理 3D 字段值来返回距离。
 
-Test with
+使用这个来测试：
 
 ```
 p = Point3D(3,4,9)
@@ -625,13 +591,12 @@ q = Point3D(5,6,10)
 print(p.distance(q))
 ```
 
-Add method `__str__` so that `print(q)` prints something nice like `(3,4,5)`.  Recall:
-
+添加方法`__str__`，以便`print(q)`打印出类似`(3, 4, 5)`的东西。记住：
 
 $dist(x,y) = \sqrt{(x_1-y_1)^2 + (x_2-y_2)^2 + (x_3-y_3)^2)}$
 
 
-### Solution
+### 答案
 
 
 ```python
@@ -662,20 +627,12 @@ print(p.distance(q))
 ```
 
 
-# Rationale and general thoughts
+## 理由和一般思想
 
-Because the mind of a hunter-gatherer views the world as a collection
-of objects that interact by sending messages, an OO programming paradigm
-maps well to the real world problems we try to simulate via computer.
-Further, we are at our best when programming the way our minds are
-hardwired to think.
+因为猎人 - 收集者的思想将世界视为通过发送消息交互的对象集合，所以 OO 编程范例很好地映射到现实世界问题，我们试图通过计算机模拟它们。 此外，在使用我们的思维方式编程时，我们处于最佳状态。
 
-In general when writing software, we try to map real-world entities onto programming constructs. If we take a word problem, the nouns typically become objects and the verbs typically become methods within these objects.
+通常，在编写软件时，我们会尝试将现实实体映射到编程结构中。 如果我们有了单词问题，名词通常会成为对象，而动词通常会成为这些对象中的方法。
 
-Because we can specify how differently-typed objects are similar,
-we can define new objects as they differ from existing objects.
-By correctly relating similar classes by their category/commonality/
-similarity, code reuse occurs as a side-effect of inheritance.
+因为我们可以指定不同类型的对象如何相似，所以我们可以定义新对象，因为它们与现有对象不同。 通过按类别/共性/相似性正确地关联类似的类，作为继承的副作用，代码重用就出现了。
 
-Non-OO languages are inflexible/brittle because the exact type
-of variables must be specified.  In OO languages, *polymorphism* is the ability to refer to groups of similar but different types using a single type reference.
+非 OO 语言是不灵活/脆弱的，因为必须指定确切的变量类型。在 OO 语言中，*多态*是使用单个类型引用，来引用相似但不同类型的分组的能力。
